--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
-<%= @post.author.name %>
-<%= @post.author.hometown %>
+
+<h1>A Time To Kill</h1>
+<%= render 'authors/author' %>
 
 <h1><%= @post.title %></h1>
 <p><%= @post.description %></p>
